--- a/Home Page/CSS/main.css
+++ b/Home Page/CSS/main.css
@@ -592,7 +592,7 @@ body header #first_img {
   height: 55vh;
   background-image: url(https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/44392206_2152131651770528_1881851452729589760_o.jpg?_nc_cat=107&_nc_oc=AQmw6uEAxhFutvaPJlJJ7t6LiPXKGsp81SZugpkXQbLHfC1Qe4RFBOqNCDgbcEFg6qg&_nc_ht=scontent-lga3-1.xx&oh=471181003bf6a80990a2607972dc4ecd&oe=5E05CB98);
   background-size: cover;
-  background-position: center center;
+  background-position: center 100%;
 }
 
 @media (min-width: 576px) {
@@ -603,7 +603,7 @@ body header #first_img {
 
 @media (min-width: 768px) {
   body header #first_img {
-    height: 85vh;
+    height: 80vh;
     background-attachment: fixed;
   }
 }
@@ -616,13 +616,13 @@ main #opening_section {
   background: #ffeda4;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 237, 164, 0.6)), color-stop(30%, #f2d4b6), color-stop(80%, #bbd2f4));
   background: linear-gradient(180deg, rgba(255, 237, 164, 0.6) 0%, #f2d4b6 30%, #bbd2f4 80%);
-  padding-bottom: 2.75rem;
+  padding: 1.75rem 0 2.75rem 0;
 }
 
 main #opening_section h2 {
   text-transform: capitalize;
   margin: 0;
-  color: #8fb5ed;
+  color: #0a2e62;
   font-weight: 200;
   padding: 2rem;
   padding-bottom: 0;
@@ -646,7 +646,9 @@ main #opening_section h2 span {
 
 main #opening_section .reserve_cta {
   border-color: transparent;
-  background: #50d58a;
+  background: #3aa669;
+  -webkit-box-shadow: 2px 1px 6px -1px #3f8e61;
+          box-shadow: 2px 1px 6px -1px #3f8e61;
 }
 
 main #opening_section .reserve_cta:hover {
@@ -660,7 +662,7 @@ main #opening_section p {
   padding: 2rem;
   max-width: 576px;
   margin: 0 auto;
-  color: #4a7b9f;
+  color: #0a2e62;
   font-size: 150%;
   font-family: 'Roboto', sans-serif;
   line-height: 1.4;
@@ -709,7 +711,6 @@ main #pop_services_section h3 {
   margin-bottom: 0;
   padding: 0;
   font-family: 'roboto', sans-serif;
-  font-style: italic;
   text-transform: capitalize;
 }
 
@@ -719,18 +720,15 @@ main #pop_services_section h3:last-child {
 
 main #pop_services_section h3 a {
   margin: 1rem 0 2.5rem;
-  background: none;
+  background: #3e7dab;
   border: 2px solid #3e7dab;
-  color: #3e7dab;
-  font-family: Arial, Helvetica, sans-serif;
+  color: white;
   font-style: normal;
-  font-weight: 500;
 }
 
 main #pop_services_section h3 a:hover {
-  -webkit-box-shadow: 0px 0px 1px 1px #3e7dab;
-          box-shadow: 0px 0px 1px 1px #3e7dab;
-  font-weight: 600;
+  color: #3e7dab;
+  background: none;
 }
 
 main #about_us_cta_section {
@@ -758,10 +756,11 @@ main #about_us_cta_section {
 main #about_us_cta_section article {
   height: 100%;
   width: 100%;
-  background: rgba(180, 203, 237, 0.8);
+  background: rgba(180, 203, 237, 0.6);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  text-shadow: 0px 0px 2px #d9d9d9;
 }
 
 @media (min-width: 768px) {
@@ -787,9 +786,8 @@ main #about_us_cta_section article div {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   padding: 3rem;
-  color: #fff7d7;
+  color: #334C71;
   margin: 0 auto;
-  text-shadow: 2px 1px 1px #a8a8a8;
 }
 
 @media (min-width: 768px) {
@@ -817,6 +815,7 @@ main #about_us_cta_section article div p {
 }
 
 main #about_us_cta_section article div a {
+  text-shadow: 2px 1px 1px #a8a8a8;
   font-size: 125%;
   font-style: italic;
   font-family: 'Mina', sans-serif;
@@ -928,6 +927,7 @@ main #benefit_overlay #ending_benefits_section article {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  color: #303740;
 }
 
 @media (min-width: 768px) {
@@ -971,13 +971,13 @@ main #benefit_overlay #ending_benefits_section article p {
   white-space: nowrap;
   margin-right: 1.5rem;
   width: 300px;
-  color: white;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: start;
+  text-shadow: 1px 0px 2px rgba(255, 255, 255, 0.8);
 }
 
 @media (min-width: 768px) {
@@ -1009,20 +1009,20 @@ main #benefit_overlay #ending_benefits_section article p svg {
   min-width: 40px;
   max-width: 40px;
   height: auto;
-  color: white;
 }
 
 main #benefit_overlay #ending_benefits_section .reserve_cta {
-  border: white solid 1px;
   color: white;
-  background: transparent;
+  border: #303740 solid 2px;
+  background: #303740;
 }
 
 main #benefit_overlay #ending_benefits_section .reserve_cta:hover {
-  -webkit-text-decoration: underline solid currentColor 1px;
-          text-decoration: underline solid currentColor 1px;
   -webkit-box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 0.8);
           box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 0.8);
+  background: transparent;
+  color: #303740;
+  text-shadow: 0px 0px 1px rgba(255, 255, 255, 0.8);
 }
 
 main #pop_services_section, main #about_us_cta_section, main #testimony_section, main #benefit_overlay {
