--- a/Services/CSS/main.css
+++ b/Services/CSS/main.css
@@ -10,8 +10,8 @@
 }
 
 .reserve_cta:hover {
-  border-color: #96c2a9;
-  color: #96c2a9;
+  color: #b4cbed;
+  border-color: #b4cbed;
   background: white;
 }
 
@@ -27,7 +27,9 @@
   max-width: 450px;
   min-width: 300px;
   margin: 2rem auto;
-  background: #96c2a9;
+  background: #4b7a9c;
+  -webkit-box-shadow: 5px 5px 20px -5px white;
+          box-shadow: 5px 5px 20px -5px white;
   border-radius: .5rem;
   position: relative;
   height: 500px;
@@ -419,42 +421,68 @@ body #fixed_up:hover {
 }
 
 body header {
-  padding-top: 100px;
   padding-bottom: 2rem;
-  text-align: center;
-  background: #96c2a9;
+  background: #686664;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(35%, #686664), to(#4a7b9f));
+  background: linear-gradient(180deg, #686664 35%, #4a7b9f 100%);
 }
 
-body header #opening_article {
+body header #opening_section {
+  width: 100%;
+  height: 55vh;
+  background: url(https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/54432383_2267464946903864_1217704321693515776_n.jpg?_nc_cat=109&_nc_oc=AQmX4mcARpeCUwKyqpP2HszvZHenbryufh8U2iQuNegmospChv3sNKkeIZE9Py6SxH4&_nc_ht=scontent-lga3-1.xx&oh=f7489c36559dadb5cca04c7562f0fc40&oe=5E28A30A);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+@media (min-width: 576px) {
+  body header #opening_section {
+    height: 70vh;
+  }
+}
+
+@media (min-width: 768px) {
+  body header #opening_section {
+    height: 80vh;
+    background-attachment: fixed;
+  }
+}
+
+body header #opening_section #opening_article {
   color: white;
+  background: rgba(50, 50, 50, 0.7);
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-left: 2rem;
 }
 
-body header #opening_article h1 {
-  padding: 1rem 0 .5rem;
+body header #opening_section #opening_article h1 {
   font-size: 350%;
   margin: 0;
 }
 
-body header #opening_article h2 {
+body header #opening_section #opening_article h2 {
   font-size: 175%;
   margin: 0;
-  padding: 0 0 .25rem;
 }
 
-body header #opening_article p {
+body header #opening_section #opening_article p {
   font-weight: 600;
-  padding: .25rem 2rem 1.5rem;
-  margin: 0 auto;
   max-width: 400px;
 }
 
 body header #mobile_contents_header {
-  border: 1px solid black;
-  background: white;
-  width: 400px;
-  margin: .5rem auto 0;
-  text-align: left;
-  padding: 0 1rem 1rem;
+  padding: 0 2rem 1rem;
 }
 
 @media (min-width: 992px) {
@@ -464,15 +492,21 @@ body header #mobile_contents_header {
 }
 
 body header #mobile_contents_header h2 {
-  color: #8f8f8f;
+  color: white;
+  font-size: 100%;
+  padding-left: 5rem;
+  text-align: right;
+  display: none;
 }
 
 body header #mobile_contents_header #outside_ul {
   list-style-type: none;
+  padding-left: 1.25rem;
 }
 
 body header #mobile_contents_header #outside_ul li h3 a {
-  color: #8baee3;
+  color: #c6d9f6;
+  font-size: 130%;
 }
 
 body header #mobile_contents_header #outside_ul li ul {
@@ -484,7 +518,8 @@ body header #mobile_contents_header #outside_ul li ul li {
 }
 
 body header #mobile_contents_header #outside_ul li ul li a {
-  color: #76af8f;
+  font-size: 115%;
+  color: #c6d9f6;
 }
 
 body header #mobile_contents_header #outside_outside_ul_atag {
@@ -540,10 +575,17 @@ body header #sample_card {
   }
 }
 
+main #massage_services_section {
+  background: #4a7b9f;
+  background: -webkit-gradient(linear, left top, left bottom, from(#4a7b9f), color-stop(70%, #c9dbf6));
+  background: linear-gradient(180deg, #4a7b9f 0%, #c9dbf6 70%);
+}
+
 main #massage_services_section h2 {
-  color: #96c2a9;
+  color: white;
   font-size: 200%;
-  margin: 3rem 0 1rem 3rem;
+  padding: 3rem 0 1rem 3rem;
+  margin: 0;
   text-decoration: underline;
 }
 
@@ -572,7 +614,7 @@ main #massage_services_section #massage_services_div {
 
 main #massage_services_section h3 {
   font-size: 150%;
-  color: #96c2a9;
+  color: white;
   margin-bottom: 0;
   padding: 0;
   text-transform: capitalize;
@@ -592,10 +634,17 @@ main #massage_services_section h3 a {
   margin-top: -.5rem;
 }
 
+main #package_promo_section {
+  background: #c9dbf6;
+  background: -webkit-gradient(linear, left top, left bottom, from(#c9dbf6), to(white));
+  background: linear-gradient(180deg, #c9dbf6 0%, white 100%);
+}
+
 main #package_promo_section #promo_h2 {
-  color: #96c2a9;
+  color: white;
   font-size: 200%;
-  margin: 3rem 0 1rem 3rem;
+  padding: 3rem 0 1rem 3rem;
+  margin: 0;
   text-decoration: underline;
 }
 
