--- a/The Spa (about)/CSS/main.css
+++ b/The Spa (about)/CSS/main.css
@@ -1,8 +1,36 @@
+.social_icons {
+  padding: 0 0 2rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.social_icons a {
+  margin: 0 1rem;
+  font-size: 175%;
+}
+
+.social_icons a svg {
+  font-size: 200%;
+  color: #4d97ff;
+}
+
+.social_icons a svg:hover {
+  color: #40bf77;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
   min-width: 390px;
+}
+
+body h2 {
+  text-transform: capitalize;
 }
 
 body header #first_img {
@@ -39,5 +67,374 @@ body header #first_img h1 {
     background-attachment: fixed;
     background-position: 60% 15%;
   }
+}
+
+main #about_us_section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: skyblue;
+  padding: 1rem;
+}
+
+@media (min-width: 768px) {
+  main #about_us_section {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+
+main #about_us_section #about_us_text {
+  color: white;
+  width: 95%;
+  margin: 3rem 0;
+}
+
+@media (min-width: 768px) {
+  main #about_us_section #about_us_text {
+    width: 40%;
+  }
+}
+
+main #about_us_section #about_us_imgs {
+  width: 95%;
+  position: relative;
+}
+
+@media (min-width: 768px) {
+  main #about_us_section #about_us_imgs {
+    width: 40%;
+  }
+}
+
+main #about_us_section #about_us_imgs img {
+  width: 100%;
+  display: block;
+  height: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  max-width: 500px;
+}
+
+main #philosophy_section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background: lightgray;
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  main #philosophy_section {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+  }
+}
+
+main #philosophy_section #philosophy_text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 500px;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+main #philosophy_section #philosophy_text h2, main #philosophy_section #philosophy_text p {
+  padding: 0 2rem;
+}
+
+@media (min-width: 768px) {
+  main #philosophy_section #philosophy_text {
+    width: 50%;
+  }
+}
+
+main #philosophy_section #philosophy_img {
+  height: 500px;
+}
+
+main #philosophy_section #philosophy_img img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 50% 80%;
+     object-position: 50% 80%;
+}
+
+@media (min-width: 768px) {
+  main #philosophy_section #philosophy_img {
+    width: 50%;
+  }
+}
+
+main #lorem_ip_section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background: lightgray;
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  main #lorem_ip_section {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+main #lorem_ip_section #lorem_ip_text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 500px;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+main #lorem_ip_section #lorem_ip_text h2, main #lorem_ip_section #lorem_ip_text p {
+  padding: 0 2rem;
+}
+
+@media (min-width: 768px) {
+  main #lorem_ip_section #lorem_ip_text {
+    width: 50%;
+  }
+}
+
+main #lorem_ip_section #lorem_ip_img {
+  height: 500px;
+}
+
+main #lorem_ip_section #lorem_ip_img img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 50% 80%;
+     object-position: 50% 80%;
+}
+
+@media (min-width: 768px) {
+  main #lorem_ip_section #lorem_ip_img {
+    width: 50%;
+  }
+}
+
+main #walkthrough_section {
+  background: url(https://steemitimages.com/p/62PdCouTvNPDiCnjgoQXRxyJDrzuLR4KbVsRymyPFoZWoSyLehvDA1DhHCw2wKXGrHNtQgwePtGMMHQiWr8Z2pMkLQ9RJ3PgbWS4Bn8A4MUdzna?format=match&mode=fit);
+  background-size: cover;
+  background-position: center center;
+}
+
+main #walkthrough_section article {
+  background: rgba(50, 50, 50, 0.8);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 5rem 0;
+  color: white;
+}
+
+main #walkthrough_section article h2 {
+  margin: 0;
+}
+
+main #walkthrough_section article a {
+  font-size: 600%;
+}
+
+main #meet_team_section {
+  text-align: center;
+  background: cornsilk;
+  padding-bottom: 1rem;
+}
+
+main #meet_team_section h2 {
+  margin: 0 0 1rem;
+}
+
+main #meet_team_section #team_imgs {
+  display: -ms-grid;
+  display: grid;
+}
+
+@media (min-width: 576px) {
+  main #meet_team_section #team_imgs {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr;
+        grid-template-rows: 1fr;
+  }
+}
+
+@media (min-width: 992px) {
+  main #meet_team_section #team_imgs {
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    -ms-grid-rows: 1fr;
+        grid-template-rows: 1fr;
+  }
+}
+
+main #meet_team_section #team_imgs article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 80%;
+  max-width: 250px;
+  min-width: 150px;
+  margin: 2rem auto;
+  position: relative;
+  height: 325px;
+  min-height: 325px;
+  max-height: 325px;
+}
+
+main #meet_team_section #team_imgs article:not(:first-child) {
+  display: none;
+}
+
+@media (min-width: 576px) {
+  main #meet_team_section #team_imgs article:not(:last-child) {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media (min-width: 992px) {
+  main #meet_team_section #team_imgs article:last-child {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+main #meet_team_section #team_imgs article img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  max-height: 100%;
+}
+
+main #meet_team_section #team_imgs article p {
+  position: absolute;
+  background: rgba(50, 50, 50, 0.5);
+  color: white;
+  bottom: 0;
+  right: 0;
+  padding: .5rem 1rem;
+  margin: 0;
+}
+
+main #social_media_section {
+  text-align: center;
+  background: tan;
+}
+
+main #social_media_section h2 {
+  margin: 0;
+  padding: 0 1rem;
+}
+
+main #social_media_section ul {
+  margin: 0 auto 1rem;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+main #social_media_section ul li {
+  text-align: left;
+}
+
+main #final_cta_section {
+  background-image: url(https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/54390832_2266552796995079_5686315371649302528_n.jpg?_nc_cat=103&_nc_oc=AQmHi9S_TQZnvdSc4VW7MgKu6QOVqj4VqdXfX-v8FNVxvo6d5k-hOoms-6tZ7u8vCPhtgCTA4yHzbytE0Pag7jaa&_nc_ht=scontent-lga3-1.xx&oh=1c4267b1db8f7a70891068da4a367871&oe=5DF9AC1F);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+@media (min-width: 768px) {
+  main #final_cta_section {
+    background-attachment: fixed;
+  }
+}
+
+main #final_cta_section article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #bbd2f4;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, rgba(187, 210, 244, 0.5)), to(rgba(168, 168, 168, 0.5)));
+  background: linear-gradient(180deg, rgba(187, 210, 244, 0.5) 50%, rgba(168, 168, 168, 0.5) 100%);
+}
+
+main #final_cta_section article h2 {
+  margin: 0;
+  padding: 1rem 0;
 }
 /*# sourceMappingURL=main.css.map */
