--- a/Services/CSS/main.scss
+++ b/Services/CSS/main.scss
@@ -445,6 +445,7 @@ body{
             background-position: center center;
             background-repeat: no-repeat;
 
+
             @include mediasm{
                 height: 70vh;
             }
@@ -459,30 +460,98 @@ body{
                 background: rgba(50, 50, 50, .7);
                 height: 100%;
                 display: flex;
-                flex-direction: column;
-                justify-content: center;
-                padding-left: 2rem;
+                justify-content: flex-start;
+                align-items: center;
+                padding: 0 2rem;
                 // padding: .25rem 2rem 1.5rem;
+
+                @include medialg{
+                    justify-content: space-around;
+                }
                 
-                h1{
-                    // padding: 1rem 0 .5rem;
-                    font-size: 350%;
-                    margin: 0;
-                }
+                #opening_content{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                
+                    h1{
+                        // padding: 1rem 0 .5rem;
+                        font-size: 350%;
+                        margin: 0;
+                    }
 
-                h2{
-                    font-size: 175%;
-                    margin: 0;
-                    // padding: 0 0 .25rem;
-                }
+                    h2{
+                        font-size: 175%;
+                        margin: 0;
+                        // padding: 0 0 .25rem;
+                    }
 
-                p{
-                    font-weight: 600;
-                    // padding: .25rem 2rem 1.5rem;
-                    // margin: 0 auto;
-                    max-width: 400px;
+                    p{
+                        font-weight: 600;
+                        // padding: .25rem 2rem 1.5rem;
+                        // margin: 0 auto;
+                        max-width: 400px;
+                    }
+                }
+                
+                #sample_card{
+                    display: none;
+
+                    @include medialg{
+                        display: flex;
+                        flex-direction: column;
+
+                        h2{
+                            color: white;
+                            text-decoration: underline;
+                            font-size: 135%;
+                            text-align: left;
+                            margin: 2rem 2rem -1.5rem;
+                            // padding-right: 10rem;
+                        }
+
+                        .pop_service{
+                            max-width: 300px;
+                            min-width: 150px;
+                            height: 250px;
+                            min-height: 250px;
+                            max-height: 250px;
+
+                            .pop_serve_outer_in{
+                                // background: $main_blue;
+                                background: #4b7a9c;
+                                border-bottom-right-radius: 1rem;
+                                border-bottom-left-radius: 1rem;
+                                color: white !important;
+                                padding: .5rem;
+
+                                h3{
+                                    font-size: 125%;
+                                    margin: 0;
+                                }
+
+                                small{
+                                    font-size: 75%;
+                                    margin: .25rem;
+                                }
+
+                                p{
+                                    font-size: 80%;
+                                    margin: 0;
+                                    padding: 0.25rem 0.25rem 0 .25rem;
+                                }
+
+                                h4{
+                                    margin: auto .5rem 1rem auto;
+                                    font-size: 125%;
+                                }
+                            }
+                        }
+                    }
                 }
             } // end of opening article
+
+            
         }
 
         #mobile_contents_header{
@@ -546,51 +615,7 @@ body{
             }
         }
 
-        #sample_card{
-            display: none;
-
-            @include medialg{
-                display: flex;
-                flex-direction: column;
-
-                h2{
-                    color: white;
-                    text-decoration: underline;
-                    font-size: 185%;
-                    text-align: left;
-                    margin: 2rem auto -1.5rem;
-                    padding-right: 15rem;
-                }
-
-
-                .pop_serve_outer_in{
-                    background: $main_blue;
-                    border-bottom-right-radius: 1rem;
-                    border-bottom-left-radius: 1rem;
-                    color: white !important;
-
-                    h3{
-                        font-size: 200%;
-                        margin-top: .5rem;
-                        margin-bottom: 0;
-                    }
-
-                    small{
-                        font-size: 105%;
-                        margin: .25rem;
-                    }
-
-                    p{
-                        font-size: 130%;
-                    }
-
-                    h4{
-                        margin: auto 1rem 1rem auto;
-                        font-size: 175%;
-                    }
-                }
-            }
-        }
+        
     } // END OF THE HEADER TAG
 } // body "end"
 
@@ -629,7 +654,7 @@ main{
         h3{
             font-size: 150%;
             // color: $main_green;
-            color: white;
+            color: #4b7a9c;
             margin-bottom: 0;
             padding: 0;
             text-transform: capitalize;
@@ -662,7 +687,7 @@ main{
 
         #promo_h2{
             // color: $main_green;
-            color: white;
+            color: #4b7a9c;
             font-size: 200%;
             padding: 3rem 0 1rem 3rem;
             margin: 0;
@@ -757,7 +782,7 @@ main{
         // $clouds: #ecf0f1;
         margin: 0 2rem 2rem;
         
-        input {
+        #chck1 {
             position: absolute;
             opacity: 0;
             z-index: -1;
@@ -789,13 +814,13 @@ main{
                 display: flex;
                 justify-content: space-between;
                 padding: 1em;
-                background: darken($main_blue, 10%);
+                background: darken(#b4cbed, 10%);
                 font-weight: bold;
                 cursor: pointer;
                 /* Icon */
                 
                 &:hover {
-                    background: darken($main_blue, 20%);
+                    background: darken(#b4cbed, 20%);
                 }
                 &::after {
                     content: "\276F";
@@ -809,30 +834,30 @@ main{
             &-content {
                 max-height: 0;
                 padding: 0 1em;
-                color: darken($main_green, 10%);
-                background: lighten($main_gray, 50%);
+                color: darken(gray, 10%);
+                background: lighten(gray, 50%);
                 transition: all .35s;
             }
 
-            &-close {
-                display: flex;
-                justify-content: flex-end;
-                padding: 1em;
-                font-size: 0.75em;
-                background: darken($main_blue, 10%);
-                cursor: pointer;
+//             &-close {
+//                 display: flex;
+//                 justify-content: flex-end;
+//                 padding: 1em;
+//                 font-size: 0.75em;
+//                 background: darken(#b4cbed, 10%);
+//                 cursor: pointer;
 
-                &:hover {
-                    background: darken($main_blue, 20%);
-                }
-            }
+//                 &:hover {
+//                     background: darken(#b4cbed, 20%);
+//                 }
+//             }
         }
 
         // :checked
-        input:checked {
+        #chck1:checked {
 
             + .tab-label {
-                    background: darken($main_blue, 20%);
+                    background: darken(#b4cbed, 20%);
                     &::after {
                     transform: rotate(90deg);
                 }
@@ -841,6 +866,51 @@ main{
             ~ .tab-content {
                 max-height: 100vh;
                 padding: 1em;
+                 
+                form{ 
+                    display: flex;
+                    flex-direction: column;
+                    
+                    input{
+                        margin: .25rem;
+                        width: 75%;
+                        // border-radius: .3rem;
+                        border: none;
+                        border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+                        font-size: 125%;
+                        padding: .2rem 0;
+                    }
+                    
+                    label[for="inquiry_msg"]{
+                        padding: .5rem 0.25rem;
+                        width: 50%;
+                    }
+                    
+                    label[for="understand_swishbox"]{
+                        margin: .25rem 0 .5rem .25rem;
+
+                        input{
+                            width: fit-content;
+                            margin: 0;
+                            margin-right: 1rem;
+                        }
+                    }
+
+                    textarea{
+                        padding: 0.4rem;
+                        width: 50%;
+                        margin: 0.25rem 0.25rem 1rem;
+                    }
+
+                    .reserve_cta{
+                        margin: .25rem auto;
+                        padding: .25rem 0;
+                        width: 250px;
+                        font-weight: 500;
+                        font-size: 200%;
+                        border-color: inherit;
+                    }
+                }
             }
         }
     }// for the Form
